// ⠀ⓥ 2024     🌩    🌩     ⠀   ⠀
// ⠀         🌩 V͛o͛͛͛lt͛͛͛i͛͛͛͛so͛͛͛.com⠀  ⠀⠀⠀

import * as fs from 'node:fs/promises'
import * as path from 'node:path'

describe('compat', () => {
	it('importExtensions', async () => {
		expect.hasAssertions()

		const file = await fs.readFile(
			path.join(__dirname, '../../dist/esm/compat/importExtensions.js'),
		)

		expect(file.toString()).toMatchSnapshot()
	})

	it('importExtensions - d.ts', async () => {
		expect.hasAssertions()

		const file = await fs.readFile(
			path.join(__dirname, '../../dist/esm/compat/importExtensions.d.ts'),
		)

		expect(file.toString()).toMatchSnapshot()
	})
})
